# Musicto432

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml  pages.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  models.py  rate_limit.py
backend/app/services/: __init__.py  analysis_jobs.py  audio_converter.py  jobs.py  media.py  system.py  tuning_analyzer.py  youtube.py
backend/tests/: test_api.py  test_audio_converter.py  test_config.py  test_jobs.py  test_media.py  test_public_deployment.py  test_pwa.py  test_tuning_analyzer.py  test_youtube.py
docs/: ARCHITECTURE.md  AUDIO_PROCESSING.md  CALIBRATION.md  DEPLOYMENT.md  LEGAL_AND_USAGE.md  PUBLIC_DEPLOYMENT.md  PWA.md  RELEASE_v0.1.0.md  SECURITY.md  UPDATE_WORKFLOW.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  api.ts  main.tsx  strings.ts  styles.css  test-setup.ts  types.ts
frontend/src/__tests__/: App.test.tsx
scripts/: calibrate-tuning.py  doctor.sh  test-all.sh
